--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,34 +23,25 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat">
-
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".TestActivity" >
-
+        <activity android:name=".TestActivity">
         </activity>
-
         <activity android:name=".VideoActivity">
-
         </activity>
-
-        <activity android:name=".SettingActivity" >
-
+        <activity android:name=".SettingActivity">
         </activity>
-
-
-
         <activity
             android:name=".SmartPlayer"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name">
-
+        </activity>
+        <activity android:name=".GuestureActivity">
         </activity>
     </application>
 
